RESOLVED FIXED91226
[GTK] Fix disk cache size computation in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=91226
Summary [GTK] Fix disk cache size computation in WebKit2
Carlos Garcia Campos
Reported 2012-07-13 06:05:44 PDT
We are passing the free disk space value in bytes to calculateCacheSizes() which expects values in MB.
Attachments
Patch (1.48 KB, patch)
2012-07-13 06:08 PDT, Carlos Garcia Campos
xan.lopez: review+
Carlos Garcia Campos
Comment 1 2012-07-13 06:08:14 PDT
Xan Lopez
Comment 2 2012-07-13 06:36:58 PDT
Comment on attachment 152236 [details] Patch Looks good.
Carlos Garcia Campos
Comment 3 2012-07-13 06:42:11 PDT
Note You need to log in before you can comment on or make changes to this bug.