[GTK] Fix disk cache size computation in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=91226

Reviewed by Xan Lopez.

We are passing the free disk space value in bytes to
calculateCacheSizes() which expects values in MB.

* WebProcess/gtk/WebProcessGtk.cpp:
(WebKit::WebProcess::platformSetCacheModel):

Canonical link: https://commits.webkit.org/109043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122570 268f45cc-cd09-0410-ab3c-d52691b4dbfc